# userfs

./: .clang-format  .env  .gitignore  embark.config  justfile  meson.build  meson_options.txt  readme.md
include/: btrfs.h  disk.h  fs.h  overlays.h  userfs.h  utils.h
scripts/: disassemble.sh  do-clang-format.sh  run-qemu.sh
src/: btrfs.c  disk.c  fs.c  main.c  overlays.c  swap.c  utils.c
