option('partition_table', type: 'combo', choices: ['dos'], value: 'dos',
  description: 'Partition table type to use for the disk image')
option('userfs_partno', type: 'integer', value: 2,
  description: 'Partition number for the userfs partition in the disk image')
option('overlay_opt', type: 'boolean', value: false,
  description: 'Create overlayfs mount points for /opt')